url-shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: pes2ug22cs090/url-shortener:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "250m"
