url-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  type: NodePort
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
      nodePort: 31111  # You can pick a port between 30000–32767
