url-shortener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
spec:
  rules:
    - host: urlshort.local
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: url-shortener-service
                port:
                  number: 5001
